src/test/ui/issues/issue-1XXXX/issue-10545.rs
mod a {
    struct S;
    impl S { }
}

fn foo(_: a::S) { //~ ERROR: struct `S` is private
}

fn main() {}
